# example/docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
-        "/policies": {
+        "/v1/policies": {
             "get": {
                 "description": "list all available policies",
                 "produces": [
@@ -38,7 +38,7 @@
                 }
             }
         },
-        "/policies/{name}": {
+        "/v1/policies/{name}": {
             "get": {
                 "description": "get policy details by unique name, try \"disallow-capabilities\", \"CVE-2022-41723\" or \"min\"",
                 "produces": [
